--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       [
         "sh",
         "-c",
-        "npx prisma migrate deploy && npx ts-node prisma/seed.ts && npm run dev",
+        "npx prisma migrate deploy && npx ts-node src/seed.ts && npm run dev",
       ]
 
 volumes:
